--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,26 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="interactive disco, interactive, disco" />
+    <title>INTERACTIVE DISCO</title>
 
     <!-- METADATA -->
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="INTERACTIVE DISCO" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:site_name" content="INTERACTIVE DISCO" />
+    <meta property="og:url" content="https://interactivedisco.com" />
     <meta property="og:image" content="" />
 
     <!-- TWITTER CARD -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="" />
+    <meta name="twitter:title" content="INTERACTIVE DISCO" />
     <meta name="twitter:description" content="" />
     <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
+    <meta name="twitter:url" content="https://interactivedisco.com" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700" />
   </head>
   <body>
     <noscript>Please enable JavaScript to view this website.</noscript>
