--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="https://interactivedisco.com" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet" />
   </head>
   <body>
     <noscript>Please enable JavaScript to view this website.</noscript>
